[gd_scene load_steps=66 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerDefault.png" type="Texture" id=2]
[ext_resource path="res://Player/Animations/RunSide.tres" type="Animation" id=3]
[ext_resource path="res://Player/Animations/IdleSide.tres" type="Animation" id=4]
[ext_resource path="res://Player/Animations/RunDown.tres" type="Animation" id=5]
[ext_resource path="res://Player/Animations/IdleUp.tres" type="Animation" id=6]
[ext_resource path="res://Player/Animations/RunUp.tres" type="Animation" id=7]
[ext_resource path="res://Player/Animations/IdleDown.tres" type="Animation" id=8]
[ext_resource path="res://GlobalScripts/StateMachine.gd" type="Script" id=9]
[ext_resource path="res://Player/States/DodgeState.gd" type="Script" id=10]
[ext_resource path="res://Player/States/AttackState.gd" type="Script" id=11]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Player/States/MoveState.gd" type="Script" id=13]
[ext_resource path="res://Player/PlayerStats.tscn" type="PackedScene" id=14]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=15]
[ext_resource path="res://Audio/Punch.ogg" type="AudioStream" id=16]
[ext_resource path="res://Shaders/BlinkEffect.shader" type="Shader" id=17]
[ext_resource path="res://StateMachine/PunchState.tscn" type="PackedScene" id=18]
[ext_resource path="res://Player/WeaponInventory.gd" type="Script" id=19]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 17 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.866
height = 7.76801

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 64, 65 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.37 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("StateMachine")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "on_state_action_update"
}, {
"args": [ false ],
"method": "on_state_action_update"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.329956,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=5]
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60, 61 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("StateMachine")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "on_state_action_update"
}, {
"args": [ false ],
"method": "on_state_action_update"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.262618,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=6]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60, 61 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("StateMachine")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "on_state_action_update"
}, {
"args": [ false ],
"method": "on_state_action_update"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.26358,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68, 69 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("StateMachine")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "on_state_action_update"
}, {
"args": [ false ],
"method": "on_state_action_update"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.328032,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/DodgeState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/DodgeState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/DodgeState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 52, 53, 54, 55 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/DodgeState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_state_action_finished"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="AnimationNodeStateMachine" id=13]

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "PunchLeft"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "PunchRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "PunchUp"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "PunchDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RunDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=40]
states/Aim/node = SubResource( 13 )
states/Aim/position = Vector2( -30.878, 161 )
states/Dodge/node = SubResource( 18 )
states/Dodge/position = Vector2( 142, 161 )
states/Idle/node = SubResource( 23 )
states/Idle/position = Vector2( 142, 71 )
states/Punch/node = SubResource( 28 )
states/Punch/position = Vector2( 142, -34.0157 )
states/Run/node = SubResource( 33 )
states/Run/position = Vector2( 318, 71 )
transitions = [ "Idle", "Run", SubResource( 34 ), "Run", "Idle", SubResource( 35 ), "Idle", "Dodge", SubResource( 36 ), "Dodge", "Idle", SubResource( 37 ), "Punch", "Idle", SubResource( 38 ), "Idle", "Punch", SubResource( 39 ) ]
start_node = "Idle"
graph_offset = Vector2( -597.636, -26.4205 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=41]

[sub_resource type="AnimationNodeStateMachinePlayback" id=42]

[sub_resource type="CapsuleShape2D" id=43]

[sub_resource type="CapsuleShape2D" id=44]
radius = 3.0533
height = 2.16712

[sub_resource type="Animation" id=45]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=46]
resource_name = "Stop"
length = 0.1

[node name="Player" type="KinematicBody2D"]
collision_mask = 52
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
flip_h = true
hframes = 9
vframes = 8
frame = 57

[node name="ColliderBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.884 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = ExtResource( 8 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = ExtResource( 4 )
anims/IdleUp = ExtResource( 6 )
anims/PunchDown = SubResource( 4 )
anims/PunchLeft = SubResource( 5 )
anims/PunchRight = SubResource( 6 )
anims/PunchUp = SubResource( 7 )
anims/RollDown = SubResource( 8 )
anims/RollLeft = SubResource( 9 )
anims/RollRight = SubResource( 10 )
anims/RollUp = SubResource( 11 )
anims/RunDown = ExtResource( 5 )
anims/RunLeft = SubResource( 12 )
anims/RunRight = ExtResource( 3 )
anims/RunUp = ExtResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 40 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 41 )
parameters/Aim/playback = SubResource( 42 )
parameters/Dodge/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Punch/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 1 )

[node name="PlayerStats" parent="." instance=ExtResource( 14 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="DodgeState" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="PunchState" parent="StateMachine" instance=ExtResource( 18 )]

[node name="HitboxPivot" type="Position2D" parent="."]
rotation = -1.5708

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 12 )]
position = Vector2( 11, 0 )
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" parent="HitboxPivot/Hitbox" index="0"]
shape = SubResource( 43 )

[node name="Hurtbox" parent="." instance=ExtResource( 15 )]
collision_layer = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4.13709 )
shape = SubResource( 44 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="BlinkEffectAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 45 )
anims/Stop = SubResource( 46 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 19 )

[connection signal="state_changed" from="StateMachine/DodgeState" to="StateMachine" method="_on_state_changed"]
[connection signal="state_changed" from="StateMachine/AttackState" to="StateMachine" method="_on_state_changed"]
[connection signal="state_changed" from="StateMachine/MoveState" to="StateMachine" method="_on_state_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="HitboxPivot/Hitbox"]
[editable path="Hurtbox"]
